--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="text_hint_email">E-mail</string>
     <string name="text_hint_login">Login</string>
     <string name="text_hint_pass">Password</string>
+    <string name="text_hint_username">Username</string>
     <string name="text_logo_first">STUDY</string>
     <string name="text_logo_second">REPORTS</string>
     <string name="text_button_auth">Login to your account</string>
